# Geomagic_Touch_Json_UDP

./: CMakeLists.txt  README.md  main.cpp  main_backup.cpp  para.json
include/: haptic_device.hpp  json_msg_builder.hpp  json_udp_client.hpp  math_utils.hpp
